To resolve compilation issue